# KAIRO

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Cargo_BACKUP_1482.toml  Cargo_BASE_1482.toml  Cargo_LOCAL_1482.toml  Cargo_REMOTE_1482.toml  Dockerfile  GEMINI.md  Gemini.txt  LICENSE  Makefile  ONBOARDING.md  QUICKSTART.md  README.md  REPO_OVERVIEW_Codex.txt  agent_config.json  agent_creation_summary.txt  agent_registry.json  all_usages.txt  bin  check_daemon_response.py  commit_message.txt  daemon_config.json  deploy.sh  diag_script.py  diagnose_windows.py  fix_kairo_update.ps1  get_p_addresses.py  gpt_pid_candidates.ps1  handle_send_final_form.txt  merge_codex_with_main.ps1  meshnet_cli_e2e_log.txt  patch_kairo.ps1  post_commit_validation_log.txt  registered_agents.json  sample_envelopes.jsonl  send_request.py  send_to_gpt.ps1  (+13 more)
.github/workflows/: ci.yml  main.yml  release-build.yml  template.yml
.kairo/config/: node_config.json
Agent2/: agent_config.json
KAIRO-Nexus/: Cargo.toml  maps.json  nexus_daemon.py  start_nexus.ps1  stop_nexus.ps1  utils.py
KAIRO-Nexus/src/: main.rs  ui_control.rs
KAIRO-Nexus/tasks/: test_task_09.json
Nexus/: Directory.Build.props  README.md  Task.txt  requirements.txt
Nexus/.codex_logs/: dotnet_info.txt
Nexus/config/: addresses.json  addresses.json.example  pid_candidates.json  settings.json  settings.json.example
Nexus/scripts/: debug_addr.py  detect_pids.ps1  enqueue_json.py  merge_ocr_to_json.py  setup_and_run.ps1  start_background.ps1  stop_background.ps1
Nexus/src/: json_daemon.py  main.py  queue.py
PI-Vault/: .gitignore
agent_configs/: 10.0.0.2.json  Agent3.json  Agent4.json  Agent5.json  Agent6.json  Agent7.json  Agent8.json  Agent9.json  AgentTest.json  CLI.json  agent1.json  agent2.json  agent_test.json  invalid_address.json
agent_state/: AGENT_LIST.md
clear-mini/: Cargo.toml
cli_archives/: complete_20250630_172153.flag  complete_20250630_172247.flag  complete_20250630_173019.flag  complete_20250630_232621.flag  complete_20250630_235006.flag  complete_20250630_235559.flag  complete_20250630_235613.flag  new_task_20250630_172247.json  new_task_20250630_173019.json  new_task_20250630_232621.json  new_task_20250630_235006.json  result_KAIRO-SEC-001.json  result_KAIRO-SEC-002.json  result_KAIRO-SEC-003.json
config/: daemon_pids.json  wau_thresholds.yml
docs/: GEMINI_TEMPLATE.md  OPS_SMARTPHONE_MANUAL.md  ieee_draft_template.md  patent_spec.md
go-client/: README.md  client.go  go.mod
go-p2p/: go.mod
identity/: cli_identity.json
inbox_json/: cli-20250911004448-2216dfda.json  cli-20250911171956-b0f83c8f.json  cli-20250911193433-fce1292c.json
kairo-daemon/: Cargo.toml
kairo-lib/: Cargo.toml
kairof/: Cargo.toml
logs/: work_results.txt
mesh-node/: Cargo.toml
mesh-node/src/: main.rs
reports/: full_integration_report.md  kairo_clear_mini_internal_dump_patch.md  kairo_clear_mini_time_patch.md  kairo_daemon_debug_dump_api_axum.md  kairo_daemon_full_patch.md  kairo_daemon_ip_classification_patch.md  kairo_full_system_patch_A.md  kairo_repo_cleanup.md  kairo_repo_intake.md  kairo_repo_patch.md  kairo_responder_patch_A.md  kairo_responder_patch_A_no_cost.md  repo_tree_after_cleanup.md
rust-core/: Cargo.toml
rust-core/benches/: benchmark_flatbuffers.rs
rust-core/kairo_core/: Cargo.toml
rust-core/kairo_core/src/: lib.rs  session_reuse.rs
rust-core/src/: ai_tcp_packet_generated.rs  connection_manager.rs  coordination.rs  ephemeral_session_generated.rs  error.rs  keygen.rs  lib.rs  log_recorder.rs  main.rs  mesh_auditor.rs  mesh_trust_calculator.rs  packet_parser.rs  packet_signer.rs  packet_validator.rs  session.rs  signature.rs
rust-core/src/bot/: mod.rs
rust-core/src/bot/api/: mod.rs  receiver.rs  status.rs
rust-core/src/bot/core/: mod.rs
rust-core/src/bot/plugin/: mod.rs  shell.rs
rust-core/src/coordination/: api.rs  mod.rs  node_manager.rs
rust-core/src/tests/: packet_parser_test.rs
rust-core/tests/: aitcp_roundtrip.rs  coordination_test.rs  crypto_stress.rs  ephemeral_signature_test.rs  kairof_packet_test.rs  key_rotation_test.rs  log_recorder_test.rs  mesh_auditor_test.rs  packet_parser_test.rs  packet_validator_test.rs  signature_verification_test.rs  test_all.ps1  test_link.rs
samples/: README.md  kairo_ipv6_sample.pcap  vov_log_sample.jsonl
schema/: ai_tcp_packet.fbs  ephemeral_session.fbs  vov_log.fbs
scripts/: check_duplicate_deps.py  clear_agents.ps1  generate_agent_list.py  generate_kairo_pcap.py  generate_mesh_config.py  generate_test_pcaps.py  pcap_sample_template.py  renormalize.sh  update_flatbuffers.py  validate_logs.py  verify_local_llm.ps1  write_work_results.sh
src/: Cargo.toml  __init__.py  baseline_profile_manager.rs  errors.py  governance.rs  kairo_lib  log_recorder.py  mesh_auditor.rs  mesh_trust_calculator.rs  seed_node_acl_manager.rs
src/agent/: Cargo.toml  agent_config_gen.rs  check_registry.rs  config.rs  forged_sender.rs  mesh_udp_sender.rs  receive_signed.rs  send_message.rs  setup_agent.rs  signed_sender.rs  validate_config.rs
src/bot/: Cargo.toml  main.rs
src/bot/api/: status.rs
src/bot/ui/: index.html
src/governance/: Cargo.toml  propose_override.rs  sign_override.rs
src/kairo-daemon/: Cargo.toml  config.rs  gpt_log_processor.rs  gpt_responder.rs  handle_send.rs  handler.rs  kairo_p  kairo_p_daemon.rs  main.rs  p_signature_validator.rs  task_queue.rs
src/kairo-daemon/api/: controller.rs
src/mesh-node/: Cargo.toml  main.rs  mesh_node.rs
src/mesh-node/src/: main.rs
src/server/: Cargo.toml  seed_node.rs
src/server/src/: main.rs
tests/: KAIRO_Autoloop.py  baseline_profile_test.rs  behavior_anomaly_test.rs  conflict_resolver_test.rs  diagnosis_integration_test.rs  mesh_auditor_test.rs  packet_parser_test.rs  packet_validator_test.rs  setup_agent_smoke.rs  test_generate_kairo_pcap.py  test_log_recorder.py  wau_config_test.rs
tests_py/: KAIRO_Autoloop.py  test_errors.py  test_generate_mesh_config.py  test_generate_test_pcaps.py  test_log_recorder.py
vov/: README.md  example_log.jsonl  signing_key.txt
(+94 files in other folders)
