[package]
name = "kairo"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "kairof",
  "mesh-node",
  "rust-core",
  "kairo"
]
resolver = "1"

[dependencies]
hex = "0.4"
rand = "0.8"
rand_core = "0.6"
ed25519-dalek = "2.2.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "setup_agent"
path = "bin/onboard/setup_agent.rs"

[[bin]]
name = "seed_node"
path = "bin/dev/seed_node.rs"

# [[bin]]
# name = "seed_node_mock"
# path = "bin/dev/seed_node_mock.rs"