[package]
name = "setup_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
kairo_lib = { path = "src/kairo-lib" }
kairo_core = { path = "rust-core" }
flatbuffers = "25.2.10"
clap = { version = "4", features = ["derive"] }
dirs = "5"

sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "^0.4"
rand = "^0.8"
ed25519-dalek = { version = "^2", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-acl = "0.3"
whoami = "1.5"
winapi = { version = "0.3", features = ["winnt"] }

[workspace]
members = [
  "rust-core",
  "src/agent",
  "src/governance",
  "src/kairo-daemon",
  "src/kairo-lib",
  "src/kairof",
  "src/bot",
  "src/mesh-node",
  "src/server", "clear-mini",
]
resolver = "2"
