[package]
name = "kairo-nexus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2"
dirs = "5"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-named-pipes = "0.1.0"
parking_lot = "0.12"
windows-sys = { version = "0.52", features = ["Win32_Foundation"] }