[package]
name = "mesh_node"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
kairo_core = { path = "../rust-core" }
kairo = { path = "../kairo-lib" }
ed25519-dalek = "2.0"
rand_core = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
hex = "0.4"

[[bin]]
name = "setup_agent"
path = "../bin/onboard/setup_agent.rs"
