[package]
name = "kairo_core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
description = "Core library for the KAIRO mesh system."
repository = "https://github.com/elementary-particles-Man/KAIRO"

[lib]
name = "kairo_core"
path = "src/lib.rs"

[dependencies]
bytes = "1.0"
flatbuffers = "25.2.10"
tokio = { version = "1.46", features = ["full"] }
ed25519-dalek = "2.2"
warp = "0.3.7"
zstd = { version = "0.12", default-features = false }
rand = "0.8"
rand_core = "0.6"
hmac = "0.12"
sha2 = "0.10"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.6"
