# ./rust-core/Cargo.toml
[package]
name = "kairo_core"
version = "0.1.0"
edition = "2021"

[dependencies]
flatbuffers = "25.2.10"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
chrono = "0.4"
ed25519-dalek = "2.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.7", features = ["v4"] }
warp = "0.3"
thiserror = "1.0"
bytes = "1.6"

[dev-dependencies]
criterion = "0.7.0"
