[package]
name = "kairo_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "2"
hex = "0.4.3"
rand_core = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
rand = "0.8"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "setup_agent"
path = "setup_agent.rs"

[[bin]]
name = "signed_sender"
path = "signed_sender.rs"
