[package]
name = "kairobot"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
simple_logger = "5.0.0"
simplelog = "0.12.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hex = "0.4"
chrono = "0.4"
ed25519-dalek = "2.2.0"
kairo_lib = { path = "../kairo-lib" }
kairo_core = { path = "../../rust-core" }
flatbuffers = "25.2.10"

[[bin]]
name = "kairobot"
path = "main.rs"
