[package]
name = "kairo_governance"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
chrono = "0.4"
hex = "0.4"
rand = "0.8"
ed25519-dalek = "2"

kairo_lib = { path = "../kairo-lib" }

[[bin]]
name = "propose_override"
path = "propose_override.rs"
