[package]
name = "mesh_node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "mesh_node"
path = "src/main.rs"
