[package]
name = "mesh_node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
log = "0.4"
simple_logger = "5.0.0"
clap = { version = "4", features = ["derive"] }
simplelog = "0.11.0"

[[bin]]
name = "mesh_node"
path = "src/main.rs"